# devenvDemo

./: README.md  customDevEnv.cast  devenv.nix  pyproject.toml
mysite/: settings.py
